change to SecurityConfig.java